# rookrustpad

./: Cargo.toml  README.md
src/: main.rs  rookrustpad.rs
src/rookrustpad/: api.rs  app_configuration.rs  page.rs
src/rookrustpad/api/: aoc_handler.rs  static_handler.rs  test_handlers.rs
src/rookrustpad/page/: aoc.rs  index.rs
src/rookrustpad/service/: aoc.rs
src/rookrustpad/service/aoc/: y2022.rs
src/rookrustpad/service/aoc/y2022/: day11.rs
www/: aoc_launch.html  aoc_launch.js  index.html
www/aoc_problems/2022/: Day 11 - Advent of Code 2022.html  Day 12 - Advent of Code 2022.html
www/aoc_problems/2022/Day 11 - Advent of Code 2022_files/: js
www/aoc_problems/2022/Day 12 - Advent of Code 2022_files/: js
