[package]
name = "rookrustpad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
env_logger = "0.10.0"
lazy-regex = "3.0.1"
maud = { version = "0.25.0", features = ["actix-web"] }
num-bigint = { version = "0.4.4", features = ["serde"] }
num-traits = "0.2.16"
regex = "1.9.3"
serde = { version = "1.0.181", features = ["derive"] }
